@@ -1,8 +1,8 @@
 Package: crc32c
 Type: Package
 Title: Cyclic Redundancy Check with CPU-Specific Acceleration
-Version: 0.0.1.1
-Date: 2023-05-08
+Version: 0.0.1.2
+Date: 2023-05-10
 Authors@R: c(person(given = "Dirk", family = "Eddelbuettel",
                     role = c("aut", "cre"), email = "edd@debian.org", 
                     comment = c(ORCID = "0000-0001-6419-907X")),
