@@ -2,4 +2,5 @@
 
 rm -rf *~ */*~ src/*.o src/*.so \
    src/crc32c/libcrc32c.a \
-   src/crc32c/build
+   src/crc32c/build \
+   src/Makevars
